# stacc

./: .gitignore  README.md  REDEPLOY.sh  compose.yaml  update_version_number.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy.yml  prettier.yml  rust.yml
api/: Cargo.toml  Dockerfile
api/src/: errors.rs  main.rs  middleware.rs
api/src/models/: data.rs  mod.rs  post.rs  visitor.rs
api/src/routes/: misc.rs  mod.rs  posts.rs
api/src/utils/: checks.rs  chicago.rs  environment.rs  mod.rs  mongo.rs
docs/: docker.md
frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.html  styles.css
frontend/src/: errors.rs  main.rs  router.rs
frontend/src/models/: blog.rs  chicago.rs  mod.rs  response.rs  story.rs
frontend/src/pages/: about.rs  blog.rs  mod.rs  not_found.rs  post_view.rs  root.rs  utils.rs  violence.rs
frontend/src/traits/: abstractable_hashmap.rs  mod.rs  popup.rs  sortable.rs
frontend/src/utils/: background.rs  date.rs  mod.rs  open_graph.rs
