[package]
authors = ["Joseph Lai"]
edition = "2021"
name = "api"
version = "1.0.0"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
ansi_term = "0.12.1"
chrono = "0.4.24"
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures-util = "0.3.28"
lazy_static = "1.4.0"
log = "0.4.17"
mongodb = "2.5.0"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
