[package]
authors = ["Joseph Lai"]
edition = "2021"
name = "frontend"
version = "1.0.0"

[dependencies]
gloo-console = "0.2.3"
gloo-net = { version = "0.2.6", features = ["http"] }
gloo-utils = "0.1.6"
lazy_static = "1.4.0"
thiserror = "1.0.40"
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
wasm-cookies = "0.1.0"
web-sys = { version = "0.3.63", features = ["HtmlElement", "CssStyleDeclaration", "Document"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
